--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      
+    </div>
     <script src="https://kit.fontawesome.com/8096198d37.js" crossorigin="anonymous"></script>
+    <script type="module" src="/src/main.jsx"></script>
+
   </body>
 </html>
